--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <form action="/" method="post">
         <label for="team_name">Enter URL: </label>
-        <input id="team_name" type="text" name="name_field" value="Default name for team.">
+        <input id="team_name" type="text" name="name_field" value="Enter The URL to short">
         <input type="submit" value="OK">
 
         <label for="sludge">Enter Sludge: </label>
