Removed Extra Submitbox

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     <form action="/" method="post">
         <label for="team_name">Enter URL: </label>
         <input id="team_name" type="text" name="name_field" value="Enter The URL to short">
-        <input type="submit" value="OK">
+        <!-- <input type="submit" value="OK"> -->
 
-        <label for="sludge">Enter Sludge: </label>
+        <label for="sludge">Enter URL Nickname: </label>
         <input id="sludge" type="text" name="sludge" value="URL endpoint">
         <input type="submit" value="OK">        
     </form>
