Login, Dashboard, logout, sign-up added

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,15 @@
 <body>
     <form action="/" method="post">
         <label for="team_name">Enter URL: </label>
-        <input id="team_name" type="text" name="name_field" value="Enter The URL to short">
-        <!-- <input type="submit" value="OK"> -->
+        <input id="team_name" type="text" name="name_field" placeholder="Enter The URL to short">
+
 
         <label for="sludge">Enter URL Nickname: </label>
-        <input id="sludge" type="text" name="sludge" value="URL endpoint">
+        <input id="sludge" type="text" name="sludge" placeholder="URL endpoint">
         <input type="submit" value="OK">        
     </form>
-Courious on how to make it?
-Check Blog post on the same  <a href="./index.html">here</a> 
+<a href="/login">Login</a>
+<a href="/sign-up">Register</a>
+<a href="/logout">Logout</a>
 </body>
 </html>
